--- a/public/Restaurant/assets/css/style.css
+++ b/public/Restaurant/assets/css/style.css
@@ -235,7 +235,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -344,7 +344,7 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #fff;
@@ -1140,64 +1140,17 @@ section {
 /*--------------------------------------------------------------
 # Book A Table
 --------------------------------------------------------------*/
-.book-a-table .php-email-form {
+.book .book-form {
   width: 100%;
 }
 
-.book-a-table .php-email-form .form-group {
+.book .book-form .form-group {
   padding-bottom: 8px;
 }
 
-.book-a-table .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
 
-.book-a-table .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.book-a-table .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.book-a-table .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.book-a-table .php-email-form .loading {
-  display: none;
-  text-align: center;
-  padding: 15px;
-}
-
-.book-a-table .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #cda45e;
-  border-top-color: #1a1814;
-  animation: animate-loading 1s linear infinite;
-}
-
-.book-a-table .php-email-form input,
-.book-a-table .php-email-form textarea {
+.book .book-form input,
+.book .book-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -1206,30 +1159,30 @@ section {
   color: white;
 }
 
-.book-a-table .php-email-form input::-moz-placeholder,
-.book-a-table .php-email-form textarea::-moz-placeholder {
+.book .book-form input::-moz-placeholder,
+.book .book-form textarea::-moz-placeholder {
   color: #a49b89;
 }
 
-.book-a-table .php-email-form input::placeholder,
-.book-a-table .php-email-form textarea::placeholder {
+.book .book-form input::placeholder,
+.book .book-form textarea::placeholder {
   color: #a49b89;
 }
 
-.book-a-table .php-email-form input:focus,
-.book-a-table .php-email-form textarea:focus {
+.book .book-form input:focus,
+.book .book-form textarea:focus {
   border-color: #cda45e;
 }
 
-.book-a-table .php-email-form input {
+.book .book-form input {
   height: 44px;
 }
 
-.book-a-table .php-email-form textarea {
+.book .book-form textarea {
   padding: 10px 12px;
 }
 
-.book-a-table .php-email-form button[type=submit] {
+.book .book-form button[type=submit] {
   background: #cda45e;
   border: 0;
   padding: 10px 35px;
@@ -1238,7 +1191,7 @@ section {
   border-radius: 50px;
 }
 
-.book-a-table .php-email-form button[type=submit]:hover {
+.book .book-form button[type=submit]:hover {
   background: #d3af71;
 }
 
@@ -1466,15 +1419,15 @@ section {
   margin-top: 40px;
 }
 
-.contact .php-email-form {
+.contact .book-form {
   width: 100%;
 }
 
-.contact .php-email-form .form-group {
+.contact .book-form .form-group {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form .validate {
+.contact .book-form .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
@@ -1482,7 +1435,7 @@ section {
   font-size: 13px;
 }
 
-.contact .php-email-form .error-message {
+.contact .book-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1491,7 +1444,7 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .sent-message {
+.contact .book-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1500,13 +1453,13 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact .book-form .loading {
   display: none;
   text-align: center;
   padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact .book-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1518,8 +1471,8 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .book-form input,
+.contact .book-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -1528,30 +1481,30 @@ section {
   color: white;
 }
 
-.contact .php-email-form input::-moz-placeholder,
-.contact .php-email-form textarea::-moz-placeholder {
+.contact .book-form input::-moz-placeholder,
+.contact .book-form textarea::-moz-placeholder {
   color: #a49b89;
 }
 
-.contact .php-email-form input::placeholder,
-.contact .php-email-form textarea::placeholder {
+.contact .book-form input::placeholder,
+.contact .book-form textarea::placeholder {
   color: #a49b89;
 }
 
-.contact .php-email-form input:focus,
-.contact .php-email-form textarea:focus {
+.contact .book-form input:focus,
+.contact .book-form textarea:focus {
   border-color: #cda45e;
 }
 
-.contact .php-email-form input {
+.contact .book-form input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact .book-form textarea {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .book-form button[type=submit] {
   background: #cda45e;
   border: 0;
   padding: 10px 35px;
@@ -1560,7 +1513,7 @@ section {
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .book-form button[type=submit]:hover {
   background: #d3af71;
 }
 
